Footer button alignment fix again

--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -1385,6 +1385,7 @@
         transition: opacity 200ms ease-out;
         justify-content: center;
         text-align: center;
+        align-items: center;
         @media (max-width: 600px) {
           display: flex;
           margin-top: 3vw;
